// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> button variations renders button color 1`] = `
<div>
  <button
    class="flex w-12/12 px-10 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded-4 focus:outline-none h-52 bg-teal hover:bg-teal-dark focus:bg-teal"
    type="submit"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders button size 1`] = `
<div>
  <button
    class="flex w-12/12 px-10 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded-4 focus:outline-none h-36 bg-salmon hover:bg-salmon-dark focus:bg-salmon"
    type="submit"
  >
    Label
  </button>
</div>
`;

exports[`<Button> button variations renders disabled button 1`] = `
<div>
  <button
    class="flex w-12/12 px-10 justify-center items-center text-white leading-xs transition-2 cursor-pointer font-bold text-base rounded-4 focus:outline-none h-52 bg-salmon hover:bg-salmon-dark focus:bg-salmon cursor-not-allowed bg-grey-3 hover:bg-grey-3"
    disabled=""
    type="submit"
  >
    Label
  </button>
</div>
`;
